@@ -25,7 +25,6 @@ import org.labkey.api.module.ModuleContext;
 import org.labkey.api.security.User;
 import org.labkey.api.util.ExceptionUtil;
 import org.labkey.api.util.PageFlowUtil;
-import org.labkey.api.util.StringUtilsLabKey;
 import org.labkey.api.util.TestContext;
 import org.springframework.jdbc.UncategorizedSQLException;
 
@@ -40,7 +39,6 @@ import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -266,7 +264,7 @@ public class TableSelectorTestCase extends AbstractSelectorTestCase<TableSelecto
         {
             List<String> emails = stream
                 .map(User::getEmail)
-                .collect(Collectors.toList());
+                .toList();
             assertEquals(count, emails.size());
         }
 
@@ -274,7 +272,7 @@ public class TableSelectorTestCase extends AbstractSelectorTestCase<TableSelecto
         try (Stream<String> stream = selector.uncachedStream(String.class))
         {
             List<String> emails = stream
-                .collect(Collectors.toList());
+                .toList();
             assertEquals(count, emails.size());
         }
 
@@ -293,7 +291,7 @@ public class TableSelectorTestCase extends AbstractSelectorTestCase<TableSelecto
 
         List<String> emails = selector.stream(User.class)
             .map(User::getEmail)
-            .collect(Collectors.toList());
+            .toList();
         assertEquals(count, emails.size());
 
         // findFirst() should work and shouldn't cause any problems (e.g., shouldn't log a not closed exception)
@@ -335,17 +333,14 @@ public class TableSelectorTestCase extends AbstractSelectorTestCase<TableSelecto
             assertFalse("Expected getCollection() with primitive to succeed with stable column ordering", stable);
         }
 
-        int columnCount = selector.getColumnCount();
-
         try
         {
             assertEquals(count, selector.getValueMap().size());
             assertTrue("Expected getValueMap() to fail with unstable column ordering", stable);
-            assertTrue("Expected getValueMap() to fail with " + StringUtilsLabKey.pluralize(columnCount, "column"), columnCount > 1);
         }
         catch (IllegalStateException e)
         {
-            assertFalse("Expected getValueMap() to succeed with stable column ordering and " + StringUtilsLabKey.pluralize(columnCount, "column"), stable && columnCount > 1);
+            assertFalse("Expected getValueMap() to succeed with stable column ordering", stable);
         }
 
         try
@@ -354,11 +349,10 @@ public class TableSelectorTestCase extends AbstractSelectorTestCase<TableSelecto
             selector.fillValueMap(map);
             assertEquals(count, map.size());
             assertTrue("Expected fillValueMap() to fail with unstable column ordering", stable);
-            assertTrue("Expected fillValueMap() to fail with " + StringUtilsLabKey.pluralize(columnCount, "column"), columnCount > 1);
         }
         catch (IllegalStateException e)
         {
-            assertFalse("Expected fillValueMap() to succeed with stable column ordering and " + StringUtilsLabKey.pluralize(columnCount, "column"), stable && columnCount > 1);
+            assertFalse("Expected fillValueMap() to succeed with stable column ordering", stable);
         }
 
         //noinspection UnusedDeclaration
@@ -383,6 +377,7 @@ public class TableSelectorTestCase extends AbstractSelectorTestCase<TableSelecto
 
         try
         {
+            int columnCount = selector.getColumnCount();
             MutableInt forEachResultsCount = new MutableInt(0);
             selector.forEachResults(results -> {
                 assertEquals(columnCount, results.getFieldIndexMap().size());
